cdrkit (1.1.5) RELEASED; urgency=low

  * Let --devices use sr on kernel 2.6 and sg on kernel 2.4
  * forced MAGIC_ERROR definition for older version, thanks to T. Schmidt

 -- Eduard Bloch <blade@debian.org>  Fri, 06 Apr 2007 16:22:49 +0200

cdrkit (1.1.4) RELEASED; urgency=low

  [ Eduard Bloch ]
  * On Linux, do device scanning on /dev/sr first and fallback to /dev/sg and
    others only then, thus having better chances to use the same exclusive
    lock as other programs when the user provided only the b/t/l
    device specification, since the Linux kernel is not able to coordinate the
    locking between the userspace interfaces
  * some refactoring, moved new Linux specific extensions to scsi-linux-sg.c,
    more relaxed device opening checks on scanning
  * some more warnings about b/t/l syntax deprecation

 -- Eduard Bloch <blade@debian.org>  Sun, 01 Apr 2007 21:49:03 +0200

cdrkit (1.1.3) RELEASED; urgency=medium

  [ Eduard Bloch ]
  * Fixed fishing for transfer size in sysfs, now ready for
    /dev/class/scsi_generic contents
  * Fixed /dev/sg%d pattern scan in --devices, now iterating over modern style
    device files. Thanks to Thomas Schmidt.
  * Dealing with the last newline char when processing
    /proc/sys/dev/cdrom/info contents
  * print the track size in the info message when guessing
  * added some missing or probably missing definitions in
    wodim/CMakeLists.txt, restoring the reading from inf files
  * passing through the real file size to the UDF generator. Creating
    incorrect iso9660 but having it this way is better than no LFS at all.
  * removed md5* parts and integration from icedax, patch by
    Vladimir Nadvornik <nadvornik@suse.cz>
  * various small bugfixes or cosmetic fixes picked from still GPLed parts of
    cdrtools-2.01.01a24, excluding meta changes and big tree.c and mkisofs.c
    refactoring. Stream file name option enabled now.
  * wodim.1: "you have 4 seconds to abort ..."