@@ -295,74 +295,3 @@ int select_target(SCSI *usalp, FILE *f) {
 	return (amt);
 }
 
-#ifdef DEAD_CODE
-static int
-select_unit(SCSI *usalp, FILE *f)
-{
-	int	initiator;
-	int	clun	= usal_lun(usalp);
-	int	low	= -1;
-	int	high	= -1;
-	int	lun;
-
-	usalp->silent++;
-
-	fprintf(f, "scsibus%d target %d:\n", usal_scsibus(usalp), usal_target(usalp));
-
-	initiator = usal_initiator_id(usalp);
-	for (lun = 0; lun < 8; lun++) {
-
-#ifdef	FMT
-		if (print_disknames(usal_scsibus(usalp), usal_target(usalp), lun) < 8)
-			fprintf(f, "\t");
-		else
-			fprintf(f, " ");
-#else
-		fprintf(f, "\t");
-#endif
-		if (fprintf(f, "%d,%d,%d", usal_scsibus(usalp), usal_target(usalp), lun) < 8)
-			fprintf(f, "\t");
-		else
-			fprintf(f, " ");
-		fprintf(f, "%3d) ", lun);
-		if (usal_target(usalp) == initiator) {
-			fprintf(f, "HOST ADAPTOR\n");
-			continue;
-		}
-		usal_settarget(usalp, usal_scsibus(usalp), usal_target(usalp), lun);
-		if (!unit_ready(usalp) && usalp->scmd->error == SCG_FATAL) {
-			fprintf(f, "*\n");
-			continue;
-		}
-		if (unit_ready(usalp)) {
-			/* non extended sense illegal lun */
-			if (usalp->scmd->sense.code == 0x25) {
-				fprintf(f, "BAD UNIT\n");
-				continue;
-			}
-		}
-		if (low < 0)
-			low = lun;
-		high = lun;
-
-		getdev(usalp, FALSE);
-		print_product(f, usalp->inq);
-	}
-	usalp->silent--;
-
-	if (low < 0) {
-		errmsgno(EX_BAD, "No lun found.\n");
-		return (0);
-	}
-	lun = -1;
-#ifdef	FMT
-	getint("Select lun", &lun, low, high);
-	usal_settarget(usalp, usal_scsibus(usalp), usal_target(usalp), lun);
-	format_one(usalp);
-	return (1);
-#endif
-
-	usal_settarget(usalp, usal_scsibus(usalp), usal_target(usalp), clun);
-	return (1);
-}
-#endif
